added pusher dependency; added yarn.lock in gitignore (for now) (WB-69)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 	},
 	"dependencies": {
 		"pusher": "latest",
-		"ps-cache": "latest"
+		"ps-cache": "latest",
+		"pusher": "latest"
 	},
 	"devDependencies": {},
 	"files": [
