--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pusher-ps-cache",
-	"description": "An implementation of ps-cache, pubsub caching library, using pusher.com real-time messaging medium.",
-	"version": "1.0",
+	"description": "An implementation of ps-cache module, pubsub caching library, using pusher.com real-time messaging medium.",
+	"version": "1.0.0",
 	"author": "Mobiltron, Inc <dev@mobiltron.com>",
 	"contributors": [
 		"Vassilios Karakoidas <v.karakoidas@mobiltron.com> (http://bkarak.wizhut.com/blog/)"
@@ -19,7 +19,6 @@
 		"url": "https://github.com/MobiltronInc/pusher-ps-cache"
 	},
 	"dependencies": {
-		"pusher": "latest",
 		"ps-cache": "latest",
 		"pusher": "latest"
 	},
